--- a/public/views/homepage.html
+++ b/public/views/homepage.html
@@ -91,6 +91,6 @@
 </footer>
 
 <!-- Link to external JavaScript file -->
-<script src="/public/js/frontend.js"></script>
+<script src="/js/frontend.js"></script>
 </body>
 </html>
